--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{
     background: -webkit-linear-gradient(left, rgba(213,55,155,1) 0%, rgba(119,117,193,1) 69%, rgba(114,119,195,1) 100%);
     background: -o-linear-gradient(left, rgba(213,55,155,1) 0%, rgba(119,117,193,1) 69%, rgba(114,119,195,1) 100%);
     background: -ms-linear-gradient(left, rgba(213,55,155,1) 0%, rgba(119,117,193,1) 69%, rgba(114,119,195,1) 100%);
-    background: linear-gradient(to right, rgb(0, 0, 0) 0%, rgba(119,117,193,1) 69%, rgba(114,119,195,1) 100%);
+    background: linear-gradient(to right, rgba(213,55,155,1) 0%, rgba(119,117,193,1) 69%, rgba(114,119,195,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5379b', endColorstr='#7277c3', GradientType=1 );
 }
 
@@ -57,4 +57,28 @@ ul{
 .cabecalho ul{
     display: flex;
     justify-content: space-around;
+}
+
+.banner{
+    width: 100%;
+    height: 400px;
+    background-image: url("../img/Imagens/meta_mundo.jpg");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 8px 12px;
+    border-radius: 5px;
+}
+
+.banner .btn{
+    margin-top: 230px;
+
 }
