--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ ul{
 #horarios{
     width: 100%;
     margin: 30px 0;
+    box-shadow: 0px 0px 22px black;
         background: rgba(67,43,95,1);
         background: -moz-linear-gradient(top, rgba(67,43,95,1) 0%, rgba(30,28,33,1) 100%);
         background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(67,43,95,1)), color-stop(100%, rgba(30,28,33,1)));
@@ -157,4 +158,62 @@ ul{
 
 .em_breve{
     width: 70%;
+}
+
+.content{
+    display: flex;
+    color: white;
+}
+
+.noticias{
+    width: 70%;
+    padding-right: 40px;
+    display: flex;
+    flex-flow: wrap;
+}
+
+.card{
+    width: 28%;
+    margin: 2%;
+    box-shadow: 0px 2px 6px black;
+    background: rgb(28,30,33);
+    background: linear-gradient(180deg, rgba(28,30,33,1) 0%, rgba(0,0,0,1) 100%);   
+    
+}
+
+.card img{
+    width: 100%;
+    height: 140px;
+
+}
+
+.card h4{
+    padding: 1em 0 0 1em;
+}
+
+.card p{
+    padding: 1em;
+    font-size: 0.8em;
+}
+
+.resultados{
+    text-align: center;
+    margin: 2em 0;
+}
+
+.resultados img{
+    width: 30px;
+}
+
+.recentes{
+    text-align: center;
+    padding: 1.5em;
+    box-shadow: 0px 2px 6px black;
+    background: rgb(28,30,33);
+    background: linear-gradient(180deg, rgba(28,30,33,1) 0%, rgba(0,0,0,1) 100%);
+}
+
+.placar{
+    font-size: 1.5em;
+    text-shadow: 3px 3px 6px black;
 }
