--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,48 @@ ul{
     font-size: 1.5em;
     text-shadow: 3px 3px 6px black;
 }
+
+footer{
+    box-shadow: 0px 0px 10px black;
+    color: white;
+    margin-top: 30px;
+    background-color: black;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+}
+
+footer ul{
+    list-style-type: none;
+}
+
+footer .sociais{
+    display: flex;
+    justify-content: space-evenly;
+    color: var(--purple);
+    font-size: 2em;
+    padding: 1.2em 0px;
+}
+
+footer .container{
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+}
+
+footer h5{
+    padding-bottom: 1.2em;
+    color: #474747;
+    font-size: 1.7em;
+}
+footer h6{
+    text-align: end;
+    font-size: 1.1em;  
+}
+
+footer p{
+    text-align: center;
+    color: #474747;
+}
