pagina de cadastro finalizada

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,10 @@
 body{
     background-color: var(--background);
     font-family: 'Titillium Web';
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .gradient{
@@ -261,4 +264,21 @@ footer h6{
 footer p{
     text-align: center;
     color: #474747;
+}
+
+/* PÁGINA DE CADASTRO */
+
+.titulo_pagina{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/Imagens/cadastro\ \(1\).png);
+    background-attachment: fixed;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    text-transform: uppercase;
+    padding-top: 3em;
 }
