--- a/css/style.css
+++ b/css/style.css
@@ -272,8 +272,7 @@ footer p{
     width: 100%;
     height: 300px;
     background-image: url(../img/Imagens/cadastro\ \(1\).png);
-    background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     color: white;
     display: flex;
@@ -281,4 +280,92 @@ footer p{
     align-items: flex-start;
     text-transform: uppercase;
     padding-top: 3em;
+}
+
+.form_cadastro{
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0px 13px 10px rgba(0,0, 0.5), 0px -6px 15px rgba(0,0, 0.5);
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    margin-top: 3em;
+    margin-bottom: 3em;
+    background: rgb(28,30,33);
+    padding: 1.5em;
+}
+
+.campo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.campo label{
+    text-transform: uppercase;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"],
+select{
+    border: none;
+    background-color: #1E1C21;
+    color: #cccccc;
+    border-bottom: 1px solid #474747;
+    width: 60%;
+    padding: 0.5em;
+
+}
+
+input[type="date"]{
+    text-align: center;
+    font-size: 1.3em;
+}
+
+
+input:focus, select:focus{
+    outline: none;
+    background-color: #474747;
+    box-shadow: 0 0 5px black;
+    border-bottom: 1px solid var(--purple);
+}
+
+fieldset{
+    width: 100%;
+    border: none;
+    margin-bottom: 2em;
+}
+
+fieldset legend{
+    text-transform: uppercase;
+}
+
+input[type="radio"]{
+    margin-right: 0.1em;
+}
+
+fieldset label{
+    margin-right: 0.5em;
+}
+
+.termos{
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.termos label{
+    text-transform: lowercase;
+    margin-left: 0.5em;
+}
+
+.form_cadastro button{
+    border: none;
+    width: 60%;
+    margin-top: 2em;
+    cursor: pointer;
 }
