--- a/css/style.css
+++ b/css/style.css
@@ -369,3 +369,34 @@ fieldset label{
     margin-top: 2em;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1200px){
+    .campea{
+        right: 5%;
+    }
+    .sobre .container div{
+        width: 50%;
+    }
+    .container{
+        width: 95%;
+    }
+}
+/* FIM  */
+
+@media screen and (max-width: 768px){
+    header img{
+        max-width: 180px;
+    }
+    .container{
+        width: 98%;
+    }
+    .campea{
+        max-width: 500px;
+        margin-top: 50px;
+        right: -100px;
+    }
+    .sobre .container div{
+        width: 55%;
+        margin-left: 30px;
+    }
+}
