--- a/css/style.css
+++ b/css/style.css
@@ -399,4 +399,48 @@ fieldset label{
         width: 55%;
         margin-left: 30px;
     }
+    
+    #horarios .container{
+    }
+    .ao_vivo{
+        padding: 4em 5px;
+        width: 50%;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .em_breve{
+        width: 50%;
+        flex-wrap: wrap;
+        align-content: space-between;
+        justify-content: center;
+    }
+    .em_breve .partida{
+        margin: 0.5em 0;
+    }
+    .noticias{
+        flex-direction: column;
+
+    }
+    .card{
+        display: flex;
+        width: 100%;
+    }
+    .card img{
+        width: 30%;
+    }
+    footer .container{
+        padding-top: 0.3em;
+        width: 94%;
+    }
+
+    .mob_logo_sociais{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+    .mob_logo_sociais img{
+        max-width: 180px;
+        padding: 0.5em
+    }
+
 }
