--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,13 @@ fieldset label{
     cursor: pointer;
 }
 
+.cabecalho .fa-bars{
+    color: var(--purple);
+    font-size: 2em;
+    padding: 0.5em;
+    display: none;
+}
+
 @media screen and (max-width: 1200px){
     .campea{
         right: 5%;
@@ -441,6 +448,40 @@ fieldset label{
     .mob_logo_sociais img{
         max-width: 180px;
         padding: 0.5em
+    }
+ 
+}
+
+@media screen and (max-width: 460px){
+    .cabecalho .fa-bars{
+        display: block;
+    }
+    #menu{
+        position: absolute;
+        top: 64px;
+        background-color: black;
+        width: 100%;
+        display: none;
+    }
+    .cabecalho div{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 2em;
+    }
+    .cabecalho ul{
+        flex-direction: column;
+        height: 250px;
+        width: 100%;
+    }
+    .cabecalho ul a{
+        padding: 0.5em 80% 0.5em 0.5em;
+        margin: 0.1em 0;
+        margin-left: 2em;
+    }
+    .campea{
+        display: none;
     }
 
 }
